--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "btoa": "^1.2.1",
     "child_process": "^1.0.2",
     "express": "^4.18.1",
     "mongoose": "^6.3.3",
     "mysql": "^2.18.1",
     "nodegit": "^0.27.0",
-    "nodemon": "^2.0.16",
     "pg": "^8.7.3",
     "save": "^2.5.0",
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.4.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
   }
 }
