--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/index.js "
   },
   "keywords": [],
   "author": "",
@@ -13,7 +14,11 @@
     "body-parser": "^1.20.0",
     "btoa": "^1.2.1",
     "child_process": "^1.0.2",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "helmet": "^5.1.0",
     "mongoose": "^6.3.3",
     "mysql": "^2.18.1",
     "nodegit": "^0.27.0",
