--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
     "version": 2,
-    "routes": [
+    "builds": [
         {
-          "src": "./src/index,js",
+          "src": "./index,js",
           "use": "@vercel/node"
         }
       ],
